...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Ver-ID Sample" id="8Zp-bI-rFx"/>
                    <connections>
                        <outlet property="label" destination="vjU-3L-nCC" id="spj-QW-735"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="187" height="53"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                        <state key="normal" title="Authenticate"/>
                                        <connections>
                                            <action selector="authenticate:" destination="Sdd-6T-6MJ" eventType="touchUpInside" id="z75-EX-uEj"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Ver-ID Sample" id="hYF-1x-fh2">
                        <barButtonItem key="leftBarButtonItem" title="Settings" image="gearshape" catalog="system" id="dls-rl-FWP">
                            <connections>
                                <segue destination="xOg-E1-7RE" kind="show" id="SDk-1s-Gds"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="240" height="44"/>
                                        <items>
                                            <navigationItem title="Success" id="4Pv-rq-AuT">
                                                <barButtonItem key="rightBarButtonItem" systemItem="stop" id="zNf-JR-sX7">
                                                    <connections>
...
                </pageViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xuX-20-CFC" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <barButtonItem title="Import" image="square.and.arrow.down" catalog="system" id="ivt-Zt-EBE">
                    <connections>
                        <action selector="importRegistration:" destination="Amz-0s-0Ly" id="xH1-Zl-fwB"/>
...
                    </connections>
                </barButtonItem>
                <barButtonItem title="Register" id="LJe-di-PqA">
                    <connections>
                        <action selector="register:" destination="Amz-0s-0Ly" id="tbO-rn-Cz8"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="guide_head_straight" translatesAutoresizingMaskIntoConstraints="NO" id="wG6-Zw-hQ0">
                                <rect key="frame" x="0.0" y="50" width="375" height="364"/>
                                <color key="backgroundColor" red="0.94901960784313721" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Idx-Bl-w7W">
                                        <rect key="frame" x="190.66666666666663" y="0.0" width="51" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="overwriteSwitch"/>
                                    </switch>
                                </subviews>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Registration Import" id="2s3-fx-Cug">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="58M-op-DwJ">
                            <connections>
...
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="about"/>
                                        <connections>
                                            <segue destination="Amz-0s-0Ly" kind="show" id="Pdk-vf-QMV"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Normal" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LPo-RG-QCJ">
                                                    <rect key="frame" x="281.33333333333337" y="11.999999999999998" width="55.333333333333336" height="20.333333333333332"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="securityProfile"/>
                                        <connections>
                                            <segue destination="rC5-G3-NWh" kind="show" identifier="security" id="Ukb-oj-A0h"/>
...
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="faceWidth"/>
                                        <connections>
                                            <segue destination="QOr-Vg-B4O" kind="show" id="VpI-Aa-Deh"/>
...
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="faceHeight"/>
                                        <connections>
                                            <segue destination="VQQ-YL-C15" kind="show" id="uZh-Xb-e81"/>
...
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="faceDetectionProfile"/>
                                        <connections>
                                            <segue destination="BKQ-sm-NWn" kind="show" identifier="templateExtractionThreshold" id="WFx-dY-WQt"/>
                                        </connections>
                                    </tableViewCell>
...
                                        <accessibility key="accessibilityConfiguration" identifier="faceDetectionProfile"/>
                                        <connections>
                                            <segue destination="BKQ-sm-NWn" kind="show" identifier="confidenceThreshold" id="MKe-mN-3A7"/>
                                        </connections>
                                    </tableViewCell>
...
                                    </subviews>
                                </tableViewCellContentView>
                                <accessibility key="accessibilityConfiguration" identifier="poseCount"/>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="checkcell" textLabel="zVZ-wA-QPb" style="IBUITableViewCellStyleDefault" id="Byc-8n-aMV">
...
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
