...
                UIAction(title: "Export registration", image: UIImage(systemName: "square.and.arrow.up")) { _ in
                    guard let button = self.navigationItem.rightBarButtonItem else {
                        return
                    }
                    self.shareRegistration(button)
                },
                UIAction(title: "Unregister", image: UIImage(systemName: "trash"), attributes: [.destructive]) { _ in
                    guard let button = self.navigationItem.rightBarButtonItem else {
                        return
                    }
                    self.reset(button)
                }
            ]
...
        self.uploadedToS3 = false
        if session.settings is RegistrationSessionSettings && result.error == nil {
            Globals.updateProfilePictureFromSessionResult(result)
            Globals.deleteImagesInSessionResult(result)
            self.updateUserDisplay()
            let alert = UIAlertController(title: "Registration successful", message: nil, preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "OK", style: .default))
            self.present(alert, animated: true)
        } else {
            let sessionResultPackage = SessionResultPackage(verID: session.environment, settings: session.settings, result: result)
            let viewController = SessionDiagnosticsViewController.create(sessionResultPackage: sessionResultPackage)
            if result.error != nil {
                viewController.title = "Session Failed"
            } else {
                viewController.title = "Success"
            }
            viewController.delegate = self
            self.navigationController?.pushViewController(viewController, animated: true)
            if #available(iOS 13, *) {
...
        importViewController.delegate = self
        self.navigationController?.pushViewController(importViewController, animated: true)
    }
    
    func registrationImportViewController(_ registrationImportViewController: RegistrationImportViewController, didImportRegistrationFromURL url: URL) {
        self.updateUserDisplay()
        let title = "Registration imported"
        let alert = UIAlertController(title: title, message: nil, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .default) { _ in
            self.navigationController?.popViewController(animated: true)            
        })
        self.present(alert, animated: true)
    }
...
