...
        self.confidenceThresholdCell.detailTextLabel?.text = String(format: "%.01f", confidenceThreshold)
        let preset = FaceDetectionSettingsPreset(confidenceThreshold: confidenceThreshold, templateExtractionThreshold: templateExtractionThreshold)
        let profile: String
        switch preset {
        case .permissive:
            self.presetControl.selectedSegmentIndex = 0
            profile = "Permissive"
        case .normal:
            self.presetControl.selectedSegmentIndex = 1
            profile = "Normal"
        case .restrictive:
            self.presetControl.selectedSegmentIndex = 2
            profile = "Restrictive"
        default:
            self.presetControl.selectedSegmentIndex = 3
            profile = "Custom"
        }
        self.delegate?.faceDetectionSettingsViewController(self, didSetProfile: profile)
    }
...
